# fun

cddex/: README.md  cddex.bat  pyproject.toml
cddex/docs/superpowers/specs/: 2026-07-11-cddex-endless-init-design.md  2026-07-11-cddex-fixed-live-panel-design.md  2026-07-11-cddex-live-init-design.md  2026-07-11-cddex-simulated-cli-design.md
cddex/src/cddex/: __init__.py  activity.py  banner.py  classifier.py  cli.py  commands.py  init_performance.py
cddex/tests/: test_activity.py  test_banner.py  test_classifier.py  test_cli.py  test_commands.py  test_init_performance.py  test_launcher.py
