[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cddex"
version = "0.1.0"
description = "A clearly simulated colorful terminal agent"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
cddex = "cddex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

